changed logo added form fixed alignments

--- a/css/dan.css
+++ b/css/dan.css
@@ -60,7 +60,7 @@ footer.page-footer {
 }
 
 .logo {
-  width: 95px;
+  width: 150px;
 }
 
 .head-text-small {
